--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
     <title>CSS Hamburger</title>
   </head>
-  <body></body>
+  <body>
+    <div class="menu-wrap">
+      <input type="checkbox" class="toggler" />
+      <div class="hamburger"><div></div></div>
+      <div class="menu">
+        <div>
+          <div>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <header class="showcase">
+      <div class="container showcase-inner">
+        <div class="showcase-center">
+          <h1>Welcome</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis, asperiores repellendus! Obcaecati nam nihil voluptatum alias ullam officiis optio laboriosam.</p>
+          <a class="btn" href="#">Read More</a>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
